# Object_detection_sample

./: CMakeLists.txt  README.md  main.cpp
